# ipoipo_downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIX.md  README.md  codePrompt.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_anti_hotlink.py
config/: __init__.py  clash_config.yaml  settings.py
core/: __init__.py  database.py  http_client.py  proxy_manager.py
data/: downloads.db
docs/: DEVELOPMENT_GUIDE.md  USAGE_EXAMPLES.md
download/: __init__.py  downloader.py  file_manager.py
scrapers/: __init__.py  category_scraper.py  download_scraper.py  list_scraper.py
src/: __init__.py
src/api/: __init__.py
src/config/: __init__.py
src/data/: downloads.db
src/downloader/: __init__.py  downloader.py  file_manager.py
src/model/: __init__.py  database.py  http_client.py  proxy_manager.py
src/scraper/: __init__.py  category_scraper.py  download_scraper.py  list_scraper.py
src/utils/: __init__.py  logger.py
tests/: test_imports.py
utils/: __init__.py
