[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipoipo-downloader"
version = "1.0.0"
description = "Automated IPO Report Downloader with proxy support, resumable downloads, and smart deduplication"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "fake-headers>=1.0.2",
    "loguru>=0.7.2",
    "PyYAML>=6.0.1",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.1",
    "tqdm>=4.66.1"
]

[project.urls]
Homepage = "https://github.com/yourusername/ipoipo-downloader"
Repository = "https://github.com/yourusername/ipoipo-downloader"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
ipoipo-downloader = "main:main"